# webnect

./: .gitignore  Atomic.hpp  AtomicBuffer.hpp  CMakeCache.txt  CMakeLists.txt  Frame.hpp  KinectV1.cpp  KinectV1.hpp  Makefile  Makefile.old  Prova.cppm  app  app.cpp  audios.bash  audios.sh  build.sh  cmake_install.cmake  frame.fbs  frame_generated.h  jeje.c  kinect.py  kinectv1.cppm  kinectv1.hpp  main.cpp  main.c~  main.py  message.py  patch  pointcloud.proto  prova.py  pyproject.toml  server.py  test.http  test_main.http
.devcontainer/: Dockerfile  devcontainer.json
public/: index.html
